@@ -1,5 +1,10 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
+
+* old format for keywords (in syntax hl files) with ";" as the delimeter
+is dropped, use current one (regexp) instead if yoy write own hl files
+see /hls dir for examples
+
 + Ctrl-mouse wheel to zoom text at current tab
 
 + Functions - Analysis - UNITAZ sorting length
